--- a/k8s/flask-app.yaml
+++ b/k8s/flask-app.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flask-app-deployment
+  namespace: my-namespace
 spec:
   replicas: 1
   selector:
