--- a/k8s/flask-app.yaml
+++ b/k8s/flask-app.yaml
@@ -24,16 +24,28 @@ spec:
         - containerPort: 5000
 ---
 
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: flask-app-service
+# spec:
+#   selector:
+#     app: flask-app-deployment
+#   ports:
+#   - protocol: TCP
+#     port: 5000
+#     targetPort: 5000
+#     nodePort: 30001
+#   type: LoadBalancer
+
 apiVersion: v1
 kind: Service
 metadata:
   name: flask-app-service
+  namespace: my-namespace
 spec:
-  selector:
-    app: flask-app-deployment
+  type: ClusterIP
   ports:
-  - protocol: TCP
-    port: 5000
-    targetPort: 5000
-    nodePort: 30001
-  type: LoadBalancer
+    - name: http
+      targetPort: 5000
+      port: 5000
