--- a/k8s/mongo-express.yaml
+++ b/k8s/mongo-express.yaml
@@ -43,6 +43,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo-express-service
+  namespace: my-namespace
 spec:
   selector:
     app: mongo-express
