--- a/k8s/flask-app.yaml
+++ b/k8s/flask-app.yaml
@@ -44,6 +44,8 @@ metadata:
   name: flask-app-service
   namespace: my-namespace
 spec:
+  selector:
+    app: flask-app-deployment
   type: ClusterIP
   ports:
     - name: http
