--- a/k8s/flask-ingress.yaml
+++ b/k8s/flask-ingress.yaml
@@ -4,8 +4,8 @@ metadata:
   name: flask-ingress
   namespace: my-namespace
   annotations:
-    # nginx.ingress.kubernetes.io/backend-protocol: HTTP
-    # kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/backend-protocol: HTTP
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
