--- a/k8s/flask-ingress.yaml
+++ b/k8s/flask-ingress.yaml
@@ -13,7 +13,7 @@ spec:
     http:
       paths:
       - pathType: Prefix
-        path: /flask
+        path: /
         backend:
           service: 
             name: flask-app-service
