--- a/k8s/mongo-express.yaml
+++ b/k8s/mongo-express.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: mongo-express
-        image: mongo-express
+        image: mongo-express:latest
         ports:
         - containerPort: 8081
         env:
