--- a/k8s/mongo.yaml
+++ b/k8s/mongo.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: mongodb
-        image: mongo
+        image: mongo:latest
         ports:
         - containerPort: 27017
         env:
