--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 terraform/.terraform/providers/registry.terraform.io/hashicorp/google/4.83.0/darwin_amd64/terraform-provider-google_v4.83.0_x5
 terraform/.terraform.lock.hcl
+terraform/.terraform.tfstate.lock.info
+.gitignore
+terraform/terraform.tfstate.backup
+terraform/terraform.tfstate
