--- a/k8s/mongo-configmap.yaml
+++ b/k8s/mongo-configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongodb-configmap
-  namespace: my-namespace
+  namespace: flask-app-ns
 data:
   database_url: mongodb-service
