--- a/k8s/mongo-secret.yaml
+++ b/k8s/mongo-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongodb-secret
-  namespace: my-namespace
+  namespace: flask-app-ns
 type: Opaque
 data:
   mongo-root-username: dXNlcm5hbWU=
