--- a/k8s/mongo.yaml
+++ b/k8s/mongo.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb-deployment
-  namespace: my-namespace
+  namespace: flask-app-ns
   labels:
     app: mongodb
 spec:
@@ -38,7 +38,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-service
-  namespace: my-namespace
+  namespace: flask-app-ns
 spec:
   selector:
     app: mongodb
